--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "cypress": "^14.3.1"
+    "cypress": "^14.3.1",
+    "cypress-file-upload": "^5.0.8"
   },
   "dependencies": {
     "dotenv": "^16.5.0"
